--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,1 +1,16 @@
-
+<%= form_for @post do |f| %>
+  <div>
+    <%= f.label "Title" %>
+    <%= f.text_field :title %>
+  </div>
+  <div>
+    <%= f.label "Content" %>
+    <%= f.text_area :content %>
+  </div>
+  <div><%= f.collection_check_boxes :category_ids, Category.all, :id, :name %></div>
+  <div><%= f.label "New Category" %>
+    <%= f.fields_for :categories, post.categories.build do |categories_fields| %>
+      <%= categories_fields.text_field :name %>
+    <% end %></div>
+  <%= f.submit %>
+<% end %>
