--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,16 +1,21 @@
 <%= form_for @post do |f| %>
   <div>
-    <%= f.label "Title" %>
-    <%= f.text_field :title %>
+    <%= f.label :title, "Title" %>
+    <%= f.text_field :title, id: 'post_title' %>
   </div>
   <div>
-    <%= f.label "Content" %>
-    <%= f.text_area :content %>
+    <%= f.label :content, "Content" %>
+    <%= f.text_area :content, id: 'post_content' %>
   </div>
-  <div><%= f.collection_check_boxes :category_ids, Category.all, :id, :name %></div>
-  <div><%= f.label "New Category" %>
-    <%= f.fields_for :categories, post.categories.build do |categories_fields| %>
+  <div>
+    <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
+  </div>
+  <div>
+    <%= f.label :categories, "New Category" %>
+    <% new_category = @post.categories.build if @post.categories.empty? %>
+    <%= f.fields_for :categories, @post.categories do |categories_fields| %>
       <%= categories_fields.text_field :name %>
-    <% end %></div>
-  <%= f.submit %>
+    <% end %>
+  </div>
+  <%= f.submit 'Create Post' %>
 <% end %>
