--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,3 +6,11 @@
     <%= category.name %>
   <% end %> <p/>
 </div>
+
+<% @post.comments.each do |comment| %>
+  <%= comment.content %>
+<% end %>
+
+<% @post.users.each do |user| %>
+  <%= link_to user.username, user_path(user) %>
+<% end %>
