--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,8 @@
-
+<h1>Posts Commented On:</h1>
+<ul>
+<% @user.posts.each do |post|%>
+  <li>
+    <%= link_to post.title, post_path(post) %>
+  </>
+<% end %>
+</ul>
