Create user#show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,7 @@
-
+<div class=user-content>
+  <h2> User: <%= @user.username %> <h2/>
+  <br/>
+  <p> Posts commented on: <% @user.posts.each do |post| %>
+    <%= link_to post.title, post_path(post) %>
+  <% end %> <p/>
+</div>
