Display post information

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,14 @@
-
+<h1><%= @post.title %></h1>
+<h3>Categories:</h3>
+<ul>
+  <% @post.categories.each do |category| %>
+    <li><%= category.name %></li>
+  <% end %>
+</ul>
+<p><%= @post.content %></p>
+<h3>Commenters:</h3>
+<ul>
+<% @post.comments.each do |comment| %>
+  <li><%= comment.user.username %></li>
+<% end %>
+</ul>
