Do not repeat usernames

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,7 +8,7 @@
 <p><%= @post.content %></p>
 <h3>Commenters:</h3>
 <ul>
-<% @post.comments.each do |comment| %>
-  <li><%= comment.user.username %></li>
+<% @post.users.distinct.each do |user| %>
+  <li><%= user.username %></li>
 <% end %>
 </ul>
