Complete comment form

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -20,7 +20,15 @@
 </ul>
 <h3>Add a Comment:</h3>
 <%= form_for @comment do |f| %>
+  <%= f.hidden_field :post_id, value: @post.id %>
   <%= f.label :content, "Enter Comment:" %>
   <%= f.text_field :content %><br>
-  <%= f.submit "Add Comment" %>
+  <%= f.label :user_id, "Select a user:" %>
+  <%= f.collection_select :user_id, User.all, :id, :username, include_blank: true %><br>
+  <%= f.fields_for :user_attributes do |user| %>
+    <%= user.label :username, "Or create a new user:" %>
+    <%= user.text_field :username %>
+  <% end %><br>
+
+  <%= f.submit "Create Comment" %>
 <% end %>
