--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,10 +1,10 @@
 <%= form_for @post do |f| %>
-  <%= f.label "Title %>
+  <%= f.label "Title" %>
   <%= f.text_field :title %>
   <%= f.label "Content" %>
   <%= f.text_area :content %>
   <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %> 
-  <%= f.fields_for :categories, post.categories.build do |categories_fields| %> 
+  <%= f.fields_for :categories, @post.categories.build do |categories_fields| %> 
     <%= categories_fields.text_field :name %>
   <% end %> 
   <%= f.submit %> 
