--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,6 @@
-
+<h1><%= @user.username %> has commented on:</h1>
+<ul>
+<% @user.posts.each do |post| %>
+  <li><%= link_to post.title, post_path(post) %></li>
+<% end %>
+</ul>
