--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,16 @@
+<h1><%= @post.title %></h1>
 
+<p><%= @post.content %></p>
+
+<ul>
+  <% @post.categories.each do |category| %>
+    <li><%= category.name %></li>
+  <% end %>
+</ul>
+
+<h3>Comments: </h3>
+<ul>
+  <% @post.comments.each do |comment, user| %>
+    <li>User <strong><%= link_to comment.user.username, user_path(comment.user) %></strong> said  "<%= comment.content %>"</li>
+  <% end %>
+</ul>
