--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,7 @@
 <%= render 'form', post: Post.new %>
 
+<h1>Write a New Post</h1>
+
 <%= form_for @post do |f| %>
 
   <% if @post.errors.any? %>
@@ -15,16 +17,23 @@
   <% end %>
   
   <%= f.label "Title" %>
-  <%= f.text_field :title %><br>
+  <br>
+  <%= f.text_field :title %>
+  <br><br>
 
   <%= f.label "Content" %>
-  <%= f.text_area :content %><br>
+  <br>
+  <%= f.text_area :content %>
+  <br><br>
 
-  <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %><br>
+  <%= f.label "Select Categories:" %>
+  <br><br>
+  <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
   
   <%= f.fields_for :categories, @post.categories.build do |categories_fields| %>
-    <%= categories_fields.text_field :name %>
+     <%= categories_fields.text_field :name, placeholder: "Create your own category..." %>
   <% end %>
+  <br><br>
 
   <%= f.submit %>
 <% end %>
