Add email field to new user form. Add error validations

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,17 +16,31 @@
   <% end %>
 </ul>
 
-<h2>Leave a new comment:</h2>
+<h3>Leave a new comment:</h3>
 <%= form_with model: @comment do |f| %>
-  <%= f.hidden_field :post_id, value: @post.id %>
 
-  Select username or create new user: 
+  <% if @comment.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
+
+      <ul>
+      <% @comment.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <%= f.hidden_field :comment_id, value: @comment.id %>
+
   <%= f.collection_select :user_id, User.all, :id, :username, include_blank: "Select a user" %>
 
   <%= f.fields_for :user do |users_fields| %>
-    <%= users_fields.text_field :username %>
+    <%= users_fields.text_field :username, placeholder: "Add a new user..." %>
+    <%= users_fields.text_field :email, placeholder: "New user email..." %>
   <% end %>
-
+  <br><br>
+  
   <%= f.label :content %>
   <%= f.text_area :content %>
   <br><br>
