Show unique users on post page

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,10 +11,17 @@
 <h3>Comments: </h3>
 <ul>
   <% @post.comments.each do |comment| %>
-    <li>User <strong><%= link_to comment.user.username, user_path(comment.user) %></strong> 
+    <li><strong><%= comment.user.username %></strong> 
       says: <%= comment.content %></li>
   <% end %>
 </ul>
+
+<h3><%= pluralize(@users.count, "user")%> commented</h3>
+  <ol>
+    <% @users.each do |user| %>
+      <li><%= link_to user.username, user_path(user) %></li>
+    <% end %>
+  </ol>
 
 <h3>Leave a new comment:</h3>
 <%= form_with model: @comment do |f| %>
@@ -31,7 +38,7 @@
     </div>
   <% end %>
 
-  <%= f.hidden_field :comment_id, value: @comment.id %>
+  <%= f.hidden_field :post_id, value: @post.id %>
 
   <%= f.collection_select :user_id, User.all, :id, :username, include_blank: "Select a user" %>
 
@@ -40,7 +47,7 @@
     <%= users_fields.text_field :email, placeholder: "New user email..." %>
   <% end %>
   <br><br>
-  
+
   <%= f.label :content %>
   <%= f.text_area :content %>
   <br><br>
